Update website processing

--- a/src/eu/girc/informationsystem/resources/404.html
+++ b/src/eu/girc/informationsystem/resources/404.html
@@ -6,11 +6,14 @@
         <link href="/resources/style.css" rel="stylesheet">
         <script src="/resources/script.js"></script>
         <link href="/resources/favicon.png" rel="icon">
-        <meta http-equiv="refresh" content="30">
         <title>GIRC</title>
     </head>
     <body class="darkmode">
 
-	{content}
+        <div class="container">
+            <h1>404 Not Found!</h1>
+            <span style="font-size: 20px;">This site is not available or does no longer exist.</span>
+        </div>
+        
     </body>
 </html>
