--- a/src/eu/girc/informationsystem/resources/lineComponent.html
+++ b/src/eu/girc/informationsystem/resources/lineComponent.html
@@ -1,16 +1,6 @@
-<div class="container box">
+<div class="container box line-box">
 	<table>
-		<tr>
-			<td style="width: 0px;"><span>{departure}</span></td>
-			<td><span>{displayName}</span> &nbsp;
-				<i><span style="font-size: 15px; opacity: 0.5;">from {firstStation}</span></i>
-			</td>
-			<td></td>
-		</tr>
-		<tr>
-			<td></td>
-			<td><span style="font-size: 15px;">{stations}</span></td>
-			<td style="width: 0px;"><a class="button" style="padding: 10px 20px; margin: 0px;">View</a></td>
-		</tr>
+		<tr class="title"><td style="width: 0px;">{departure}</td> <td>{displayName} &nbsp; <label class="red">+5</label> &nbsp;<span class="first-station">from {fistStation}</span></td><td></td></tr>
+		<tr><td></td><td>{stations}</td><td style="width: 0px;"><a href="/line/{name}" class="button">View</a></td></tr>
 	</table>
 </div>
