Improved dynamic html sites

--- a/src/eu/girc/informationsystem/resources/site.html
+++ b/src/eu/girc/informationsystem/resources/site.html
@@ -11,6 +11,18 @@
     </head>
     <body class="darkmode">
 
-	{content}
+        <div class="menu">
+            <a class="menu-title">PIS</a>
+            <a id="menu-api">API</a>
+            <a id="menu-stations">Stations</a>
+            <a id="menu-lines">Lines</a>
+        </div>
+        <script>setMenuFocus("{menu-focus}")</script>
+
+        <div class="container-fluid">
+
+{content}   
+        </div>
+
     </body>
 </html>
