Improved station accessibility

--- a/src/eu/girc/informationsystem/resources/site.html
+++ b/src/eu/girc/informationsystem/resources/site.html
@@ -12,10 +12,10 @@
     <body class="darkmode">
 
         <div class="menu">
-            <a class="menu-title">PIS</a>
-            <a id="menu-api">API</a>
-            <a id="menu-stations">Stations</a>
-            <a id="menu-lines">Lines</a>
+            <a class="menu-title" href="/">PIS</a>
+            <a id="menu-api" href="/api" target="blank">API</a>
+            <a id="menu-stations" href="/station">Stations</a>
+            <a id="menu-lines" href="/line">Lines</a>
         </div>
         <script>setMenuFocus("{menu-focus}")</script>
 
