Added delay to html

--- a/src/eu/girc/informationsystem/resources/line-component.html
+++ b/src/eu/girc/informationsystem/resources/line-component.html
@@ -1,6 +1,6 @@
 <div class="container box line-box">
 	<table>
-		<tr class="title"><td style="width: 0px;">{departure}</td><td>{displayName} &nbsp; <label class="red">+5</label> &nbsp;<span class="first-station">from {firstStation}</span></td></td></tr>
+		<tr class="title"><td style="width: 0px;">{departure}</td><td>{displayName}&nbsp; {delay}<span class="first-station">from {firstStation}</span></td></td></tr>
 {content}  
 		<tr style="font-weight: bold;"><td style="float: right;">{arrival}</td><td>{lastStation}</td></tr>
 	</table>
