--- a/src/eu/girc/informationsystem/resources/line-preview.html
+++ b/src/eu/girc/informationsystem/resources/line-preview.html
@@ -1,6 +1,6 @@
 <div class="container box line-box">
 	<table>
-		<tr class="title"><td style="width: 0px;">{departure}</td> <td>{displayName} &nbsp; <label class="red">+5</label> &nbsp;<span class="first-station">from {fistStation}</span></td><td></td></tr>
+		<tr class="title"><td style="width: 0px;">{departure}</td> <td>{displayName}&nbsp; {delay}<span class="first-station">from {fistStation}</span></td><td></td></tr>
 		<tr><td></td><td>{stations}</td><td style="width: 0px;"><a href="/line/{name}" class="button">View</a></td></tr>
 	</table>
 </div>
