Fixed doubled station

--- a/src/eu/girc/informationsystem/resources/line-component.html
+++ b/src/eu/girc/informationsystem/resources/line-component.html
@@ -4,7 +4,7 @@
 {content}  
 		<tr style="font-weight: bold;"><td style="float: right;">{arrival}</td><td>{lastStation}</td></tr>
 	</table>
-	<table>
+	<table style="margin-top: 10px;">
 		<tr><td>Type: {type}<br>Operator: {operator}<br>Driver: {driver}</td><td><a href="/api/line/{name}" target="blank" style="float: right; margin-top: 70px;">Raw Line Data ></a></td></tr>
 	</table>
 </div>
