--- a/src/eu/girc/informationsystem/resources/line-component.html
+++ b/src/eu/girc/informationsystem/resources/line-component.html
@@ -1,8 +1,8 @@
-<div class="container box line-box">
+<div class="container box info-box">
 	<table>
-		<tr class="title"><td style="width: 0px;">{departure}</td><td>{displayName}&nbsp; {delay}<span class="first-station">from {firstStation}</span></td></td></tr>
+		<tr class="title"><td style="width: 0px;">{departure}</td><td>{displayName}&nbsp; {delay}<span class="secondary">from {firstStation}</span></td></td></tr>
 {content}  
-		<tr style="font-weight: bold;"><td style="float: right;">{arrival}</td><td>{lastStation}</td></tr>
+		<tr style="font-weight: bold;"><td style="float: right;">{arrival}</td><td>{lastStation}&nbsp; <span class="secondary">Pl. {plattform}</span></td></tr>
 	</table>
 	<table style="margin-top: 10px;">
 		<tr><td>Type: {type}<br>Operator: {operator}<br>Driver: {driver}</td><td><a href="/api/line/{name}" target="blank" style="float: right; margin-top: 70px;">Raw Line Data ></a></td></tr>
