--- a/src/eu/girc/informationsystem/resources/line-preview.html
+++ b/src/eu/girc/informationsystem/resources/line-preview.html
@@ -1,6 +1,6 @@
 <div class="container box info-box">
 	<table>
 		<tr class="title"><td style="width: 0px;">{departure}</td> <td>{displayName}&nbsp; {delay}<span class="secondary">from {fistStation}</span></td><td></td></tr>
-		<tr><td></td><td>{stations}</td><td style="width: 0px;"><a href="/line/{name}" class="button">View</a></td></tr>
+		<tr><td></td><td>{stations}</td><td style="width: 0px; vertical-align: bottom;"><a href="/line/{name}" class="button">View</a></td></tr>
 	</table>
 </div>
