--- a/src/eu/girc/informationsystem/resources/line-station-component.html
+++ b/src/eu/girc/informationsystem/resources/line-station-component.html
@@ -1,1 +1,1 @@
-<tr><td style="float: right;">{departure}</td><td>{displayName}&nbsp; <span class="secondary">Pl. {plattform}</span></td></tr>
+<tr><td style="float: right;">{departure}</td><td><a href="/station/{name}" class="grey">{displayName}</a style="color: white;">&nbsp; <span class="secondary">Pl. {plattform}</span></td></tr>
