Fixed bad css design

--- a/src/eu/girc/informationsystem/resources/station-preview.html
+++ b/src/eu/girc/informationsystem/resources/station-preview.html
@@ -1,4 +1,4 @@
-<div class="container box list-box">
+<div class="container box info-box" style="padding: 10px 20px;">
 	<table>
 		<tr class="title"><td>{displayName}</td><td style="width: 0px;"><a href="/station/{name}" class="button">View</a></td></tr>
 	</table>
