--- a/src/eu/girc/informationsystem/resources/line-station-component.html
+++ b/src/eu/girc/informationsystem/resources/line-station-component.html
@@ -1,1 +1,4 @@
-<tr><td style="float: right;">{departure}</td><td><a style="color: white;" href="/station/{name}" class="grey">{displayName}</a>&nbsp; <span class="secondary">Pl. {plattform}</span></td></tr>
+<tr>
+	<td class="float-right"><b>{departure}</b></td>
+	<td><a class="grey" href="/station/{name}">{displayName}</a>&nbsp;<i><span class="grey-text">Pl. {plattform}</span></i></td>
+</tr>
