--- a/src/eu/girc/informationsystem/resources/station-component.html
+++ b/src/eu/girc/informationsystem/resources/station-component.html
@@ -1,8 +1,8 @@
-<div class="container box info-box">
+<div class="container box pis-box">
 	<table>
 		<tr class="title"><td>{displayName}</td></tr>
 	</table>
 	<table style="margin-top: 10px;">
-		<tr><td>Plattforms: {plattforms}</td><td style="vertical-align: bottom;"><a href="/api/line/{name}" target="blank" style="float: right;">Raw Station Data ></a></td></tr>
+		<tr><td>Plattforms: {plattforms}</td><td style="vertical-align: bottom;"><a href="/api/line/{name}" target="blank" class="float-right not-mobile">Raw Station Data ></a></td></tr>
 	</table>
 </div>
