--- a/src/eu/girc/informationsystem/resources/station-preview.html
+++ b/src/eu/girc/informationsystem/resources/station-preview.html
@@ -1,5 +1,8 @@
-<div class="container box info-box" style="padding: 10px 20px;">
+<div class="container box pis-box station">
 	<table>
-		<tr class="title"><td>{displayName}</td><td style="width: 0px;"><a href="/station/{name}" class="button">View</a></td></tr>
+		<tr>
+			<td style="vertical-align: middle !important;"><span class="title">{displayName}</span></td>
+			<td style="width: 0px; vertical-align: bottom;"><a href="/station/{name}" class="button mg-0">View</a></td>
+		</tr>
 	</table>
 </div>
