--- a/src/eu/girc/informationsystem/resources/index.html
+++ b/src/eu/girc/informationsystem/resources/index.html
@@ -1,7 +1,7 @@
 <div class="container box" style="padding: 30px;">
-	<h2 style="margin-bottom: 10px;">Welcome on board of GIRC,</h2><br>
+	<h2 style="margin-bottom: 10px;">Welcome on board of GIRC</h2><br>
 	we wish you a present journey!
 </div>
 <div class="container" style="padding: 0px;">
-	<input class="search grey" type="search" placeholder="Search" onkeyup="search(event);">
+	<input class="search" type="search" placeholder="Search" onkeyup="search(event);">
 </div>
