--- a/src/eu/girc/informationsystem/resources/line-component.html
+++ b/src/eu/girc/informationsystem/resources/line-component.html
@@ -1,10 +1,13 @@
-<div class="container box info-box">
+<div class="container box pis-box">
 	<table>
-		<tr class="title"><td style="width: 0px;">{departure}</td><td>{displayName}&nbsp; {delay}<span class="secondary">from {firstStation}</span></td></td></tr>
-{content}  
-		<tr style="font-weight: bold;"><td style="float: right;">{arrival}</td><td><a class="grey" href="/station/{last}">{lastStation}</a>&nbsp; <span class="secondary">Pl. {plattform}</span></td></tr>
+		<tr>
+			<td style="width: 0px;" class="title">{departure}</td>
+			<td><span class="title">{displayName}</span>&nbsp; {delay}<i class="grey-text">from {firstStation}</i></td>
+		</tr>
+{content}
+		<tr><td class="float-right"><b>{arrival}</b></td><td><a class="grey" href="/station/{last}"><b>{lastStation}</b></a>&nbsp;<i><span class="grey-text">Pl. {plattform}</span></i></td></tr>
 	</table>
-	<table style="margin-top: 10px;">
-		<tr><td>Type: {type}<br>Operator: {operator}<br>Driver: {driver}</td><td style="vertical-align: bottom;"><a href="/api/line/{name}" target="blank" style="float: right;">Raw Line Data ></a></td></tr>
+	<table>
+	<tr><td>Type: {type}<br>Operator: {operator}<br>Driver: {driver}</td><td style="vertical-align: bottom;"><a href="/api/line/{name}" target="blank" class="float-right not-mobile">Raw Line Data ></a></td></tr>
 	</table>
 </div>
