--- a/src/eu/girc/informationsystem/resources/search.html
+++ b/src/eu/girc/informationsystem/resources/search.html
@@ -1,3 +1,3 @@
 <div class="container" style="padding: 0px;">
-	<input class="search grey" type="search" placeholder="Search" onkeyup="search(event);">
+	<input class="search" type="search" placeholder="Search" onkeyup="search(event);">
 </div>
