Reduced html complexity

--- a/src/eu/girc/informationsystem/resources/search.html
+++ b/src/eu/girc/informationsystem/resources/search.html
@@ -1,3 +1,3 @@
-<div class="container" style="padding: 0px;">
+<div style="padding: 0px;">
 	<input class="search" type="search" placeholder="Search" onkeyup="search(event);">
 </div>
