--- a/src/eu/girc/informationsystem/resources/site.html
+++ b/src/eu/girc/informationsystem/resources/site.html
@@ -22,7 +22,7 @@
         </div>
         <script>setMenuFocus("{menu-focus}")</script>
 
-        <div class="container-fluid">
+        <div class="container">
 
 {content}   
         </div>
