--- a/src/eu/girc/informationsystem/resources/station-component.html
+++ b/src/eu/girc/informationsystem/resources/station-component.html
@@ -1,4 +1,4 @@
-<div class="container box pis-box">
+<div class="box pis-box">
 	<table>
 		<tr class="title"><td>{displayName}</td></tr>
 	</table>
