--- a/src/eu/girc/informationsystem/resources/line-preview.html
+++ b/src/eu/girc/informationsystem/resources/line-preview.html
@@ -1,4 +1,4 @@
-<div class="container box pis-box">
+<div class="box pis-box">
 	<table>
 		<tr>
 			<td style="width: 0px;" class="title">{departure}</td>
