--- a/src/eu/girc/informationsystem/resources/station-preview.html
+++ b/src/eu/girc/informationsystem/resources/station-preview.html
@@ -1,4 +1,4 @@
-<div class="container box pis-box station">
+<div class="box pis-box station">
 	<table>
 		<tr>
 			<td style="vertical-align: middle !important;"><span class="title">{displayName}</span></td>
