--- a/src/eu/girc/pis/resources/station-component.html
+++ b/src/eu/girc/pis/resources/station-component.html
@@ -3,6 +3,6 @@
 		<tr class="title"><td>{displayName}</td></tr>
 	</table>
 	<table style="margin-top: 10px;">
-		<tr><td>Plattforms: {plattforms}</td><td style="vertical-align: bottom;"><a href="/api/line/{name}" target="blank" class="float-right not-mobile">Raw Station Data ></a></td></tr>
+		<tr><td>Plattforms: {plattforms}</td><td style="vertical-align: bottom;"><a href="/api/station/{name}" target="blank" class="float-right not-mobile">Raw Station Data ></a></td></tr>
 	</table>
 </div>
