Improved html building

--- a/src/eu/girc/pis/resources/line-preview.html
+++ b/src/eu/girc/pis/resources/line-preview.html
@@ -2,7 +2,7 @@
 	<table>
 		<tr>
 			<td style="width: 0px;" class="title">{departure}</td>
-			<td><span class="title">{displayName}</span>&nbsp; {delay}<i class="grey-text">from {fistStation}</i></td>
+			<td><span class="title">{displayName}</span>&nbsp; {delay}<i class="grey-text">from {first.displayName}</i></td>
 		</tr>
 		<tr>
 			<td></td>
