--- a/src/eu/girc/pis/resources/line-station-component.html
+++ b/src/eu/girc/pis/resources/line-station-component.html
@@ -1,4 +1,4 @@
 <tr>
-	<td class="float-right"><b>{departure}</b></td>
+	<td class="float-right">{departure}</td>
 	<td><a class="grey" href="/station/{name}">{displayName}</a>&nbsp;<i><span class="grey-text">Pl. {plattform}</span></i></td>
 </tr>
