--- a/src/eu/girc/pis/resources/line-station-component.html
+++ b/src/eu/girc/pis/resources/line-station-component.html
@@ -1,4 +1,5 @@
 <tr>
 	<td class="float-right">{departure}</td>
-	<td><a class="grey" href="/station/{name}">{displayName}</a>&nbsp;<i><span class="grey-text">Pl. {plattform}</span></i></td>
+	<td style="padding: 10px 0px !important">{delay}</td>
+	<td><a class="grey" href="/station/{name}">{displayName}</a>&nbsp;<i><span class="grey-text">{plattform}</span></i></td>
 </tr>
