Added timeline for trains

--- a/src/eu/girc/pis/resources/line-component.html
+++ b/src/eu/girc/pis/resources/line-component.html
@@ -1,9 +1,9 @@
 <div class="box pis-box">
-	<table>
+	<table style="height: 1px;">
 		<tr>
-			<td style="width: 0px" class="title">{departure}</td>
-			<td style="width: 0px; padding: 0px !important" class="title"></td>
-			<td><span class="title">{displayName}</span>&nbsp; {delay}<i class="grey-text">from {first.displayName}</i></td>
+			<td class="title" colspan="2">{departure}</td>
+			<td style="padding: 10px 0px !important">{delay}</td>
+			<td style="width: 100%;"><span class="title">{displayName}</span>&nbsp; {cancelled}<i class="grey-text">from {first.displayName}</i></td>
 		</tr>
 {content}
 	</table>
