--- a/src/eu/girc/pis/resources/line-station-component.html
+++ b/src/eu/girc/pis/resources/line-station-component.html
@@ -1,5 +1,6 @@
-<tr>
-	<td class="float-right">{departure}</td>
+<tr style="height: 100%;">
+	<td style="padding: 0px;"><div style="box-sizing: border-box; height: 100%; margin-left: 10px; background-color: {status}">&nbsp;</div></td>
+	<td css="float-right">{departure}</td>
 	<td style="padding: 10px 0px !important">{delay}</td>
 	<td><a class="grey" href="/station/{name}">{displayName}</a>&nbsp;<i><span class="grey-text">{plattform}</span></i></td>
 </tr>
