--- a/src/eu/girc/pis/resources/line-component.html
+++ b/src/eu/girc/pis/resources/line-component.html
@@ -1,13 +1,18 @@
-<div class="box pis-box">
+<div class="box box-table">
 	<table style="height: 1px;">
 		<tr>
 			<td class="title" colspan="2">{departure}</td>
 			<td style="padding: 10px 0px !important">{delay}</td>
-			<td style="width: 100%;"><span class="title">{displayName}</span>&nbsp; {cancelled}<i class="grey-text">from {first.displayName}</i></td>
+			<td style="width: 100%;"><span class="title">{displayName}</span>&nbsp; {cancelled} <i class="grey-text" style="white-space: nowrap;">from {first.displayName}</i></td>
 		</tr>
 {content}
 	</table>
-	<table>
-	<tr><td>Type: {type}<br>Operator: {operator}<br>Driver: {driver}</td><td style="vertical-align: bottom;"><a href="/api/line/{name}" target="blank" class="float-right not-mobile">Raw Line Data ></a></td></tr>
-	</table>
+	<div style="display:flex; gap: 20px;">
+		<div class="width-100">
+			Type: {type}<br>
+			Operator: {operator}<br>
+			Driver: {driver}<br>
+		</div>
+		<a class="not-mobile" style="margin-top: auto;" target="blank" href="/api/line/{name}">Raw Line Data ></a>
+	</div>
 </div>
