--- a/src/eu/girc/pis/resources/station-preview.html
+++ b/src/eu/girc/pis/resources/station-preview.html
@@ -1,8 +1,4 @@
-<div class="box pis-box station">
-	<table>
-		<tr>
-			<td style="vertical-align: middle !important;"><span class="title">{displayName}</span></td>
-			<td style="width: 0px; vertical-align: bottom;"><a href="/station/{name}" class="button mg-0">View</a></td>
-		</tr>
-	</table>
+<div class="box box-station">
+	<div class="title">{displayName}</div>
+	<div><a class="button mg-0" href="/station/{name}">View</a></div>
 </div>
