Fixed button position

--- a/src/eu/girc/pis/resources/line-preview.html
+++ b/src/eu/girc/pis/resources/line-preview.html
@@ -9,7 +9,7 @@
 		</div>
 		<div class="not-mobile">
 			<div class="title"></div>
-			<div><a class="button mg-0" href="/line/{name}">View</a></div>
+			<div style="margin-top: auto;"><a class="button mg-0" href="/line/{name}">View</a></div>
 		</div>
 	</div>
 	<div class="only-mobile" style="margin-top: 20px;"><a class="button mg-0 width-100" href="/line/{name}">View</a></div>
